[tool.poetry]
name = "repl_python3_pygameToolKitEngine"
version = "0.1.0"
description = "Pygame Tool Kit Engine"
authors = ["Emmanuel Norambuena <eanorambuena@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
