[tool.poetry]
name = "repl_python3_pythonToolKitEngine"
version = "1.3.8"
description = "Python Tool Kit Engine: a tool kit for Pygame and Pyglet implementations."
authors = ["Emmanuel Norambuena <eanorambuena@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
ptk = "^1.3.8"
pyglet = "^1.5.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
